@@ -64,6 +64,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #14426: Correct the Date format in Expires attribute of Set-Cookie
+  Header in Cookie.py.
+
 - Issue #14721: Send proper header, Content-length: 0 when the body is an empty
   string ''. Initial Patch contributed by Arve Knudsen.
 
